feat: get input for x